# asteroid_smash

./: .gitignore  .pdm.toml  Makefile  README.md  asteroid.py  main.py  pyproject.toml  smasher.py
game/: asteroid.py  scenes.py
res/: highscores.txt
tests/: test_asteroids.py
